df-derive/tests/fail/146-fail-direct-self-recursive-field.stderr
error: field `child` recursively references `Node` after transparent wrapper peeling; recursive nested DataFrame schemas are not supported. Store an identifier or foreign key, flatten the structure before deriving, or mark the field `#[df_derive(skip)]`.
 --> tests/fail/146-fail-direct-self-recursive-field.rs:8:23
  |
8 |     child: Option<Box<Node>>,
  |                       ^^^^

error: field `child` recursively references `SelfNamed` after transparent wrapper peeling; recursive nested DataFrame schemas are not supported. Store an identifier or foreign key, flatten the structure before deriving, or mark the field `#[df_derive(skip)]`.
  --> tests/fail/146-fail-direct-self-recursive-field.rs:14:23
   |
14 |     child: Option<Box<Self>>,
   |                       ^^^^

error: field `child` recursively references `CrateQualified` after transparent wrapper peeling; recursive nested DataFrame schemas are not supported. Store an identifier or foreign key, flatten the structure before deriving, or mark the field `#[df_derive(skip)]`.
  --> tests/fail/146-fail-direct-self-recursive-field.rs:20:23
   |
20 |     child: Option<Box<crate::CrateQualified>>,
   |                       ^^^^^^^^^^^^^^^^^^^^^

error: field `child` recursively references `SelfQualified` after transparent wrapper peeling; recursive nested DataFrame schemas are not supported. Store an identifier or foreign key, flatten the structure before deriving, or mark the field `#[df_derive(skip)]`.
  --> tests/fail/146-fail-direct-self-recursive-field.rs:26:23
   |
26 |     child: Option<Box<self::SelfQualified>>,
   |                       ^^^^^^^^^^^^^^^^^^^

error: field `nested` recursively references `TupleField` after transparent wrapper peeling; recursive nested DataFrame schemas are not supported. Store an identifier or foreign key, flatten the structure before deriving, or mark the field `#[df_derive(skip)]`.
  --> tests/fail/146-fail-direct-self-recursive-field.rs:31:30
   |
31 |     nested: (u64, Option<Box<TupleField>>),
   |                              ^^^^^^^^^^

error: field `field_1` recursively references `TupleStruct` after transparent wrapper peeling; recursive nested DataFrame schemas are not supported. Store an identifier or foreign key, flatten the structure before deriving, or mark the field `#[df_derive(skip)]`.
  --> tests/fail/146-fail-direct-self-recursive-field.rs:35:36
   |
35 | struct TupleStruct(u64, Option<Box<TupleStruct>>);
   |                                    ^^^^^^^^^^^

error: field `child` recursively references `GenericNode` after transparent wrapper peeling; recursive nested DataFrame schemas are not supported. Store an identifier or foreign key, flatten the structure before deriving, or mark the field `#[df_derive(skip)]`.
  --> tests/fail/146-fail-direct-self-recursive-field.rs:42:23
   |
42 |     child: Option<Box<GenericNode<T>>>,
   |                       ^^^^^^^^^^^^^^

error: field `child` recursively references `CrateQualifiedGeneric` after transparent wrapper peeling; recursive nested DataFrame schemas are not supported. Store an identifier or foreign key, flatten the structure before deriving, or mark the field `#[df_derive(skip)]`.
  --> tests/fail/146-fail-direct-self-recursive-field.rs:50:23
   |
50 |     child: Option<Box<crate::CrateQualifiedGeneric<T>>>,
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: field `child` recursively references `SelfQualifiedGeneric` after transparent wrapper peeling; recursive nested DataFrame schemas are not supported. Store an identifier or foreign key, flatten the structure before deriving, or mark the field `#[df_derive(skip)]`.
  --> tests/fail/146-fail-direct-self-recursive-field.rs:58:23
   |
58 |     child: Option<Box<self::SelfQualifiedGeneric<T>>>,
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
